# Werewolf-agent

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  MEMORY.md  README.md  README.zh-CN.md  launch-theater.bat  launch-theater.py  live-check.bat  pyproject.toml  requirements-dev.txt
.claude/hooks/: config-protection.cjs
.codex/: hooks.json
.github/: codex-review-comment.md  writing-plan.md
.github/workflows/: build-android-internal.yml  build-android-production-candidate.yml  promote-android-production.yml  tests.yml
.grill/: p2-a-2-live-smoke-and-byo-key-direction.md
.oh-my-harness/: tree.md
.tmp/: g1d-failure-audit.json  g1d-failure-provider-trace.json  g1d-metrics-test.json
.tmp/g1e-live-smoke/: decision-log.json  failure-audit.json  game-log.json  provider-trace.json
.tmp/g1e-live-smoke-2/: decision-log.json  failure-audit.json  game-log.json  provider-trace.json
clients/flutter_app/: README.md  pubspec.yaml
clients/qt_observer/: CMakeLists.txt  Main.qml  README.md  main.cpp
clients/qt_observer/qml/: AppShell.qml  DesignPreviewView.qml  EventPresentationQueue.qml  HistoryView.qml  HomeView.qml  I18n.qml  Illustrations.qml  LiveCockpitView.qml  MatchSetupView.qml  PreflightView.qml  ProviderSettingsView.qml  SettlementView.qml  TheaterView.qml  Theme.qml
clients/qt_observer/qml/components/: AppBackground.qml  AppButton.qml  AppCard.qml  AuditLinksPanel.qml  CharacterAvatar.qml  CockpitSurface.qml  ConfirmDialog.qml  DataSourceChip.qml  EmptyState.qml  EventLogPanel.qml  EventTimeline.qml  EvidenceConsole.qml  GearButton.qml  GlowDot.qml  HudCard.qml  LiveStatusCard.qml  ModeControl.qml  NavRail.qml  ParchmentComboBox.qml  ParchmentPopupMenu.qml  PerspectiveSwitcher.qml  PhaseBackground.qml  PhaseCard.qml  PhaseIndicator.qml  PhaseTimeline.qml  PlaybackBar.qml  PlaybackControls.qml  ProjectionProofPanel.qml  RoleCard.qml  SceneBackground.qml  SeatCard.qml  SeatEditorPanel.qml  SeatRing.qml  SectionHeader.qml  SettlementReport.qml  SettlementSpine.qml  SetupRoleCard.qml  SpeechTheater.qml  StatusBadge.qml  ViewBoundaryBadge.qml  (+2 more)
clients/qt_observer/src/: CredentialStore.cpp  CredentialStore.h  ObserverApiClient.cpp  ObserverApiClient.h  ObserverSseParser.cpp  ObserverSseParser.h
clients/qt_observer/tests/: tst_observer_api_client.cpp  tst_observer_sse_parser.cpp
deploy/: README.md  docker-compose.yml
docs/: CHECKPOINT_TEMPLATE.md  EVALUATION_RUBRIC.md  GOLD_DEMO.md  HEALTH_CHECK_2026-06-08.md  PRODUCT_ONE_PAGER.md  PROJECT_MAP.md  RISK_ASSESSMENT_2026-06-06.md  ROADMAP.md  SPIKES.md  TASKS.md
docs/adr/: 0001-client-agnostic-live-observer-protocol.md  0002-src-layout-installable-package.md  2026-06-09-action-runtime-orchestrator.md  2026-06-11-byo-key-security-invariants.md  2026-06-11-engine-visibility-single-source.md  2026-06-11-fake-default-live-gate-testing-strategy.md  2026-06-11-observer-visibility-layering.md  2026-06-11-role-facts-single-source.md  2026-06-12-perspective-not-access-control-boundary.md
docs/demo/: phase1-gold-demo.html  phase2-runtime-demo.html  phase2-s5-runtime-demo.html  phase3-g1-scripted-runtime-demo.html  phase3-g1b-mock-agent-runtime-demo.html  phase3-g1c-wolf-consensus-runtime-demo.html  phase3-g1d-fake-provider-runtime-demo.html  phase3-g1f-provider-replay.html
docs/game-scripts/: g1-scripted-game.json
docs/generated-games/: g1-scripted-consensus-log.json  g1-scripted-decision-log.json  g1-scripted-game-log.json  g1-scripted-metrics-summary.json  g1-scripted-score-log.json  g1b-mock-agent-decision-log.json  g1b-mock-agent-game-log.json  g1b-mock-agent-metrics-summary.json  g1b-mock-agent-score-log.json  g1c-wolf-consensus-consensus-log.json  g1c-wolf-consensus-decision-log.json  g1c-wolf-consensus-failure-audit.json  g1c-wolf-consensus-game-log.json  g1c-wolf-consensus-metrics-summary.json  g1c-wolf-consensus-score-log.json  g1d-fake-provider-decision-log.json  g1d-fake-provider-failure-audit.example.json  g1d-fake-provider-game-log.json  g1d-fake-provider-provider-trace.json  g1d-fake-provider-score-log.json  prompt-version-ledger.json
docs/gold-game/: g001-consensus-log.json  g001-decision-log.json  g001-game-log.json  s0-gold-game-seed.md  s1-schema-validation.md  s2-metrics-summary.json  s2-score-log.json  s2-scoring-validation.md  s3-attribution-validation.md  s3-rule-attribution.json  s5-metrics-summary.json  s5-score-log.json  s5-semantic-label-eval-set.json  s5-semantic-label-output.example.json
docs/health-check/: 01-risks-bugs.md  02-slimming-candidates.md  03-architecture-optimization.md  2026-06-12-system-view-audit.md  UI代码审查报告.md
docs/prs/: 2026-05-30--phase2-next-step-research.md  2026-05-30--s5-semantic-label-research.md
docs/release/: android-update-channels.md
docs/secrets/: README.md
tests/: fake_scribe.py  parity_scripts.py  test_ablation_arms.py  test_ablation_guardrails.py  test_ablation_harness_fake.py  test_ablation_metrics.py  test_action_runtime_hunter.py  test_action_runtime_parity.py  test_action_runtime_registry.py  test_action_runtime_settler.py  test_action_runtime_triggers.py  test_action_runtime_turn.py  test_action_runtime_validator.py  test_agent_assets.py  test_agent_context_packet.py  test_anthropic_provider.py  test_artifacts.py  test_attribution.py  test_b1204_guard_prompt_floor.py  test_b5_closeout.py  test_build_review_packet.py  test_c3_negative_scan.py  test_consensus_log.py  test_context_budget.py  test_continuity_context.py  test_continuity_runtime_evidence.py  test_credential_store.py  test_decision_log.py  test_deepseek_consensus_game.py  test_deepseek_launcher.py  test_deepseek_live_smoke.py  test_deepseek_provider.py  test_deepseek_provider_game.py  test_deploy_contract.py  test_emergent_engine.py  test_emergent_ledger_golden.py  test_emergent_parity_diff.py  test_emergent_role_projection.py  test_emergent_smoke_check.py  test_engine_to_scoring_e2e.py  (+91 more)
tools/: backfill_seer_claim_metrics.py  generate_golden_prompts.py  live_check_deepseek.py
updates/: internal.json  stable.json
(+398 files in other folders)
