[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "werewolf-eval"
version = "0.1.0"
description = "Client-agnostic live AI Werewolf experiment platform (evaluation core)"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/werewolf_eval"]

# T-1: scope the (report-only) CI coverage step to the package, not tests/.
[tool.coverage.run]
source = ["werewolf_eval"]

[tool.coverage.report]
precision = 1
sort = "cover"
